-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.5.4
-
-
1a0f056f3 (dev), 79be5fa98 (6.8)
QLineEdit selects all text when receiving focus.
To reproduce the issue, run the attached example and then click on the "open input dialog" button.
The issue was fixed in 6.7.0 due to the commit related to the following bug report:
https://bugreports.qt.io/browse/QTBUG-121398
Backporting the fix to Qt 6.5 is required.
Partially applying the patch in Qt 6.5 fixed the issue.
- resulted from
-
QTBUG-121398 Investigations into QWidget Qt::WA_WState_{Visible,Hidden,ExplicitShowHide} behavior
-
- Open
-
| For Gerrit Dashboard: QTBUG-127806 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 582516,5 | Make QWidgetPrivate::setVisible virtual | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 582587,2 | Make QWidgetPrivate::setVisible virtual | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |